解決 JS 报错的问题

--- a/themes/hugo-theme-stack/layouts/page/links.html
+++ b/themes/hugo-theme-stack/layouts/page/links.html
@@ -28,6 +28,7 @@ on-phone--column {{ if .Site.Params.widgets.enabled }}extended{{ else }}compact{
 </article>
 {{ partial "comments/include" . }}
 {{ partialCached "footer/footer" . }}
+{{ partialCached "article/components/photoswipe" . }}
 {{ end }}
 
 {{ define "left-sidebar" }}
