暂时挂载到 window 上

--- a/themes/hugo-theme-stack/assets/scss/style.scss
+++ b/themes/hugo-theme-stack/assets/scss/style.scss
@@ -28,6 +28,7 @@
 @import "partials/extends/works.scss";
 @import "partials/extends/reward.scss";
 @import "partials/extends/links.scss";
+@import "partials/extends/statics.scss";
 
 @import "custom.scss";
 
