--- a/themes/hugo-theme-stack/layouts/shortcodes/douban.html
+++ b/themes/hugo-theme-stack/layouts/shortcodes/douban.html
@@ -2,8 +2,10 @@
 {{ $type := (.Get "type") }}
 {{ $url := (printf "https://movie.querydata.org/api?id=%s" $id) }}
 {{- $opts := dict "minify" hugo.IsProduction "JSXFactory" "createElement" -}}
-{{- $doubanScript := resources.Get "ts/douban.ts" | js.Build $opts -}}
+{{- $doubanScript := resources.Get "ts/douban.js" | js.Build $opts -}}
 <script type="text/javascript" src="{{ $doubanScript.RelPermalink }}"></script>
-<script type="text/javascript">
-    new window.DoubanCard('{{ $id }}', '{{ $url }}', '{{ $type }}');
+<script type="module">
+    var douban = new DoubanCard('{{ $id }}', '{{ $url }}', '{{ $type }}');
+    var model = douban.fetchData()
+    douban.render(model)
 </script>
