--- a/themes/hugo-theme-stack/assets/scss/partials/extends/statics.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/extends/statics.scss
@@ -15,5 +15,6 @@
     background-color: #fff;
     flex: 0 0 33%;
     height: 300px;
-    border: 1px solid #fff
+    border: 1px solid #fff;
+    margin: 5px 0px 5px 0px;
 }
