--- a/themes/hugo-theme-stack/layouts/page/statics.html
+++ b/themes/hugo-theme-stack/layouts/page/statics.html
@@ -1,40 +1,55 @@
-{{ define "main" }}
+{{ define "body-class" }}
+{{ $TOCEnabled := default (default false .Site.Params.article.toc) .Params.toc }}
+{{- .Scratch.Set "hasTOC" (and (ge (len .TableOfContents) 100) $TOCEnabled) -}}
+article-page
+{{ end }}
 
+{{ define "container-class" }}
+on-phone--column {{ if .Site.Params.widgets.enabled }}extended{{ else }}compact{{ end }}
+{{ end }}
+
+{{ define "main" }}
 <header>
     <div class="container">
         <h1>{{ .Title }}</h1>
         <p class="subtitle">{{ .Params.subtitle }}</p>
     </div>
 </header>
-
-<section>
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js"></script>
-    <script src="/plugins/echarts-wordcloud.js"></script>
-    <div id="container" class="statics-container">
-        <div id="chart1" class="statics-chart-item"></div>
-        <div id="chart2" class="statics-chart-item"></div>
-        <div id="chart3" class="statics-chart-item"></div>
-        <div id="chart4" class="statics-chart-item"></div>
-    </div>
-    {{- $opts := dict "minify" hugo.IsProduction -}}
-    {{- $staticsScript := resources.Get "ts/statics.ts" | js.Build $opts -}}
-    <script type="text/javascript" src="{{ $staticsScript.RelPermalink }}"></script>
-    <script>
-        var statics = window.statics
-        fetch('/search/index.json')
-            .then(function (res) {
-                res.json().then(function (data) {
-                    var result = statics.handleData(data);
-                    statics.handleYearlyChart('chart1', result);
-                    statics.handleCategoryChart('chart2', result);
-                    statics.handleTagsChart('chart3', result);
-                });
-            })
-            .catch(function (err) {
-                console.log('Fetch Error : %S', err);
-            })
-    </script>
-</section>
+<article class="{{ if .Params.image }}has-image {{ end }}main-article">
+    <section class="article-content">
+        <!-- Refer to https://discourse.gohugo.io/t/responsive-tables-in-markdown/10639/5 -->
+        {{ $wrappedTable := printf "<div class=\"table-wrapper\">${1}</div>" }}
+        {{ .Content | replaceRE "(<table>(?:.|\n)+?</table>)" $wrappedTable | safeHTML }}
+    </section>
+    <section>
+        <script src="https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js"></script>
+        <script src="/plugins/echarts-wordcloud.js"></script>
+        <div id="container" class="statics-container">
+            <div id="chart1" class="statics-chart-item"></div>
+            <div id="chart2" class="statics-chart-item"></div>
+            <div id="chart3" class="statics-chart-item"></div>
+            <div id="chart4" class="statics-chart-item"></div>
+        </div>
+        {{- $opts := dict "minify" hugo.IsProduction -}}
+        {{- $staticsScript := resources.Get "ts/statics.ts" | js.Build $opts -}}
+        <script type="text/javascript" src="{{ $staticsScript.RelPermalink }}"></script>
+        <script>
+            var statics = window.statics
+            fetch('/search/index.json')
+                .then(function (res) {
+                    res.json().then(function (data) {
+                        var result = statics.handleData(data);
+                        statics.handleYearlyChart('chart1', result);
+                        statics.handleCategoryChart('chart2', result);
+                        statics.handleTagsChart('chart3', result);
+                    });
+                })
+                .catch(function (err) {
+                    console.log('Fetch Error : %S', err);
+                })
+        </script>
+    </section>
+</article>
 
 {{ partialCached "footer/footer" . }}
 
