--- a/themes/hugo-theme-stack/layouts/page/statics.html
+++ b/themes/hugo-theme-stack/layouts/page/statics.html
@@ -52,5 +52,6 @@ on-phone--column {{ if .Site.Params.widgets.enabled }}extended{{ else }}compact{
 </article>
 
 {{ partialCached "footer/footer" . }}
+{{ partialCached "article/components/photoswipe" . }}
 
 {{ end }}
