--- a/themes/hugo-theme-stack/layouts/partials/head/head.html
+++ b/themes/hugo-theme-stack/layouts/partials/head/head.html
@@ -2,6 +2,22 @@
 <meta name="referrer" content="no-referrer"/>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+<!-- Apple Touch Icon (at least 200x200px) -->
+<link rel="apple-touch-icon" href="/imgs/avatar.jpg">
+
+<!-- To run the web application in full-screen -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+
+<!-- Status Bar Style (see Supported Meta Tags below for available values) -->
+<!-- Has no effect unless you have the previous meta tag -->
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<!-- Standard favicon -->
+<link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
+
+<!-- Recommended favicon format -->
+<link rel="icon" type="image/png" href="/imgs/favicon.png">
+
 {{- $description := partialCached "data/description" . .RelPermalink -}}
 <meta name='description' content='{{ $description }}'>
 
