增加豆瓣卡片

--- a/themes/hugo-theme-stack/assets/scss/partials/extends/douban.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/extends/douban.scss
@@ -149,6 +149,7 @@
 .post-preview--excerpt {
     font-size: 14px;
     line-height: 1.825;
+    text-overflow: ellipsis;
 }
 
 .post-preview--excerpt p {
