精简右边侧栏字重

--- a/themes/hugo-theme-stack/assets/scss/partials/widgets.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/widgets.scss
@@ -57,7 +57,7 @@
             span.year {
                 flex: 1;
                 color: var(--card-text-color-main);
-                font-weight: bold;
+                font-weight: thin;
             }
 
             span.count {
