--- a/themes/hugo-theme-stack/layouts/partials/comments/provider/waline.html
+++ b/themes/hugo-theme-stack/layouts/partials/comments/provider/waline.html
@@ -20,7 +20,7 @@
             serverURL: '{{ .serverURL }}',
             lang: '{{ .lang }}',
             dark: 'auto',
-            requiredMeta: ['nick','mail','url'],
+            requiredMeta: ['nick','mail'],
         });
 
         waline.locale.placeholder = '{{ .locale.placeholder }}';
