--- a/themes/hugo-theme-stack/layouts/partials/comments/provider/waline.html
+++ b/themes/hugo-theme-stack/layouts/partials/comments/provider/waline.html
@@ -20,6 +20,7 @@
             serverURL: '{{ .serverURL }}',
             lang: '{{ .lang }}',
             dark: 'auto',
+            path: window.location.href,
             requiredMeta: ['nick','mail'],
         });
 
