--- a/themes/hugo-theme-stack/layouts/partials/head/head.html
+++ b/themes/hugo-theme-stack/layouts/partials/head/head.html
@@ -2,6 +2,8 @@
 <meta name="referrer" content="no-referrer"/>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+<meta http-equiv='content-language' content='zh-CN'>
+
 <!-- Apple Touch Icon (at least 200x200px) -->
 <link rel="apple-touch-icon" href="/imgs/avatar.jpg">
 
