--- a/themes/hugo-theme-stack/layouts/shortcodes/dplayer.html
+++ b/themes/hugo-theme-stack/layouts/shortcodes/dplayer.html
@@ -1,11 +1,11 @@
 {{ $url := (.Get "url") }}
-<div id="dplayer" data-url="{{ $url }} "></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dplayer/1.27.0/DPlayer.min.js"></script>
+<div id="dplayer"></div>
+<script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
 <script type="javascript">
-    let dp = new DPlayer({
+    const dp = new DPlayer({
     container: document.getElementById('dplayer'),
     video: {
-        url: document.getElementById('dplayer').dataset.url,
+        url: '{{ $url }}',
     },
 });
 </script>
