--- a/themes/hugo-theme-stack/assets/scss/partials/sidebar.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/sidebar.scss
@@ -158,3 +158,9 @@
         display: none;
     }
 }
+
+@media screen and (max-width:480px){
+    .right-sidebar {
+      display:none;
+     }
+   }
