--- a/themes/hugo-theme-stack/layouts/shortcodes/douban.html
+++ b/themes/hugo-theme-stack/layouts/shortcodes/douban.html
@@ -1,10 +1,38 @@
-﻿{{ $id := (.Get "id") }}
+﻿{{ $id := (string (.Get "id")) }}
 {{ $type := (.Get "type") }}
 {{ $url := cond (eq $type "movie") (printf "https://api.wmdb.tv/movie/api?id=%s" $id) (printf "https://douban.edui.fun/v2/book/id/%s" $id)}}
 {{- $opts := dict "minify" hugo.IsProduction -}}
 {{- $doubanScript := resources.Get "ts/douban.ts" | js.Build $opts -}}
+{{ $data := "" }}
+
+{{ if eq $type "book" }}
+    {{ $books := $.Site.Data.doubanSync.book }}
+    {{ range $book := $books }}
+    {{ $bid := (string (index $book "id")) }}
+    {{ if eq $bid  $id }}
+        {{ $data := $book | jsonify }}
+        {{ $data := (printf "%s" $data) }}
+    {{ end }}
+    {{ end }}
+{{ end }}
+
+{{ if eq $type "movie" }}
+    {{$items := $.Site.Data.doubanSync.movies }}
+    {{ printf "%s" $items }}
+    {{range $items}}
+    {{ printf "%s" . }}
+    {{if eq .id  $id }}
+        {{ printf "%s" . }}
+        {{ $data := . | jsonify }}
+    {{end}}
+    {{end}}
+{{ end }}
+
 <script type="text/javascript" src="{{ $doubanScript.RelPermalink }}"></script>
 <script type="text/javascript">
     var ele = document.currentScript
-    var douban = window.DoubanCard(ele, '{{ $id }}', '{{ $url }}', '{{ $type }}');
+    var douban = window.DoubanCard(ele, '{{ $id }}', '{{ $url }}', '{{ $type }}', '{{ $data }}');
 </script>
+
+
+
