--- a/themes/hugo-theme-stack/layouts/shortcodes/douban.html
+++ b/themes/hugo-theme-stack/layouts/shortcodes/douban.html
@@ -1,38 +1,43 @@
 ﻿{{ $id := (string (.Get "id")) }}
 {{ $type := (.Get "type") }}
 {{ $url := cond (eq $type "movie") (printf "https://api.wmdb.tv/movie/api?id=%s" $id) (printf "https://douban.edui.fun/v2/book/id/%s" $id)}}
+
 {{- $opts := dict "minify" hugo.IsProduction -}}
 {{- $doubanScript := resources.Get "ts/douban.ts" | js.Build $opts -}}
-{{ $data := "" }}
 
 {{ if eq $type "book" }}
     {{ $books := $.Site.Data.doubanSync.book }}
     {{ range $book := $books }}
     {{ $bid := (string (index $book "id")) }}
     {{ if eq $bid  $id }}
-        {{ $data := $book | jsonify }}
-        {{ $data := (printf "%s" $data) }}
+        {{ $localData := $book | jsonify }}
+        {{ $.Scratch.Set "localData" $localData }}
     {{ end }}
     {{ end }}
 {{ end }}
 
 {{ if eq $type "movie" }}
-    {{$items := $.Site.Data.doubanSync.movies }}
-    {{ printf "%s" $items }}
-    {{range $items}}
-    {{ printf "%s" . }}
-    {{if eq .id  $id }}
-        {{ printf "%s" . }}
-        {{ $data := . | jsonify }}
-    {{end}}
-    {{end}}
+    {{ $movies := $.Site.Data.doubanSync.movie }}
+    {{ range $movie := $movies }}
+    {{ $bid := (string (index $movie "id")) }}
+    {{ if eq $bid  $id }}
+        {{ $localData := $movie | jsonify }}
+        {{ $.Scratch.Set "localData" $localData }}
+    {{ end }}
+    {{ end }}
 {{ end }}
+
+{{ $localData := $.Scratch.Get "localData" }}
 
 <script type="text/javascript" src="{{ $doubanScript.RelPermalink }}"></script>
 <script type="text/javascript">
     var ele = document.currentScript
-    var douban = window.DoubanCard(ele, '{{ $id }}', '{{ $url }}', '{{ $type }}', '{{ $data }}');
+    var douban = window.DoubanCard(ele, '{{ $id }}', '{{ $url }}', '{{ $type }}', '{{ $localData }}');
 </script>
+
+
+
+
 
 
 
