--- a/themes/hugo-theme-stack/assets/scss/style.scss
+++ b/themes/hugo-theme-stack/assets/scss/style.scss
@@ -29,7 +29,7 @@
 @import "partials/extends/reward.scss";
 @import "partials/extends/links.scss";
 @import "partials/extends/statics.scss";
-
+@import "partials/extends/linkcard.scss";
 @import "custom.scss";
 
 a {
