--- a/themes/hugo-theme-stack/assets/scss/partials/extends/linkcard.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/extends/linkcard.scss
@@ -46,6 +46,7 @@
     overflow: hidden;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
+    margin-left: 20px;
 }
 
 .LinkCard .LinkCard-title.two-line {
