--- a/themes/hugo-theme-stack/layouts/shortcodes/recent-douban.html
+++ b/themes/hugo-theme-stack/layouts/shortcodes/recent-douban.html
@@ -40,7 +40,7 @@
     }
 
     .recent-item {
-        flex-basis: 20%;
+        flex: 1;
         margin-bottom: 7.5px;
         margin-right: 7.5px;
         text-align: center;
