--- a/themes/hugo-theme-stack/layouts/page/statics.html
+++ b/themes/hugo-theme-stack/layouts/page/statics.html
@@ -31,9 +31,7 @@ on-phone--column {{ if .Site.Params.widgets.enabled }}extended{{ else }}compact{
             <div id="chart2" class="statics-chart-item"></div>
             <div id="chart3" class="statics-chart-item"></div>
             <div id="chart4" class="statics-chart-item" data-chart="{{ jsonify $.Site.Data.languages }}"></div>
-            {{- $booksStatics := $.Site.Data.douban.books.statics -}}
-            {{- $moviesStatics := $.Site.Data.douban.movies.statics -}}
-            {{- $doubanStatics := dict "books" $booksStatics "movies" $moviesStatics -}}
+            {{- $doubanStatics := $.Site.Data.doubanSync.statics -}}
             <div id="chart5" class="statics-chart-item" data-chart="{{ jsonify  $doubanStatics }}"></div>
             <div id="chart6" class="statics-chart-item" data-chart="{{ jsonify  $.Site.Data.shanbay }}"></div>
         </div>
