支持配置是否显示摘要

--- a/themes/hugo-theme-stack/layouts/partials/article/components/details.html
+++ b/themes/hugo-theme-stack/layouts/partials/article/components/details.html
@@ -14,11 +14,13 @@
             {{- .Title -}}
         </a>
     </h2>
-
+    
+    {{ if .Site.Params.article.showSummary }}
     {{ with .Params.description }}
     <h3 class="article-subtitle">
         {{ . }}
     </h3>
+    {{ end }}
     {{ end }}
 
     {{ if or (not .Date.IsZero) (.Site.Params.article.readingTime) }}
