--- a/themes/hugo-theme-stack/layouts/shortcodes/recent-netease.html
+++ b/themes/hugo-theme-stack/layouts/shortcodes/recent-netease.html
@@ -37,9 +37,9 @@
     }
 
     .song {
-        flex-basis: 20%;
+        flex-basis: 15%;
         width: 100px;
-        margin: 10px;
+        margin: auto;
         text-align: center;
     }
 
@@ -59,6 +59,6 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        max-width: 100px;
+        max-width: 120px;
     }
 </style>
